[metadata]
name = behaviour-trees
version = 0.0.1
author = MateoPeri
description = Small implementation of the behaviour tree architecture.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mateoperi/behaviour_trees
project_urls =
    Bug Tracker = https://github.com/mateoperi/behaviour_trees/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src